--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "browserslist": [
-    "last 2 versions"
+    "last 2 version"
+
   ],
   "dependencies": {
     "i": "^0.3.6",
