--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-better-rollup": "^4.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-html-replace": "^1.6.2",
     "gulp-if": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
     "gulp-uglify-es": "^2.0.0",
     "rollup": "^2.3.2",
     "rollup-plugin-babel": "^4.4.0",
